--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>JAVASCRIPT</h1> 
-   <script src="./app.js"></script>
+   <!-- <script src="./app.js"></script> -->
+   <script src="./car.js"></script>
 </body>
 </html>
