--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Mini Calculator</title>
 </head>
 <body>
-   <h1>JAVASCRIPT</h1> 
+   <h1>JAVASCRIPT ARRAYS</h1> 
    <!-- <script src="./app.js"></script> -->
-   <script src="./car.js"></script>
+   <!-- <script src="./car.js"></script> -->
+   <script src="./array.js"></script>
 </body>
 </html>
