--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <h1>JAVASCRIPT ARRAYS</h1> 
    <!-- <script src="./app.js"></script> -->
    <!-- <script src="./car.js"></script> -->
-   <script src="./array.js"></script>
+   <!-- <script src="./array.js"></script> -->
+   <script src="./object.js"></script>
 </body>
 </html>
