--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <!-- <script src="./app.js"></script> -->
    <!-- <script src="./car.js"></script> -->
    <!-- <script src="./array.js"></script> -->
-   <script src="./object.js"></script>
+   <!-- <script src="./object.js"></script> -->
+   <script src="./loop.js"></script>
 </body>
 </html>
