--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <!-- <script src="./car.js"></script> -->
    <!-- <script src="./array.js"></script> -->
    <!-- <script src="./object.js"></script> -->
-   <script src="./loop.js"></script>
+   <!-- <script src="./loop.js"></script> -->
+   <script src="./even.js"></script>
 </body>
 </html>
